# clamav-rest-service

./: .dockerignore  README.md  TODO.md  pyproject.toml
.github/workflows/: build.yml  pr-title.yml  release.yml
.identity/: .terraform.lock.hcl  10_identity.tf  99_main.tf
clamav_rest_service/: __init__.py
clamav_rest_service/clamd/: __init__.py  client.py  types.py
clamav_rest_service/static/: styles.css
clamav_rest_service/templates/: footer.html  index.html  swagger-ui.html
docker/: Dockerfile-clamd  Dockerfile-slim  clamd-entrypoint.sh
docker/clamav/: clamd.conf  freshclam.conf
tests/: conftest.py  test_clamd_unix_socket.py  test_integration_rest.py
tests/assets/: testfile.txt
